--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Patrones Responsive Web Design</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="stylesheet">
+    <title>Titulo Prueba Curso</title>
+    <link rel="xxxxstylesheet" href="xxxxhttps://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link href="xxxxhttps://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="xxxxstylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-
+    <header class="header-principal">
+       <h1>Header Prueba Curso</h1>
+    </header>
+    <div> 
+        <nav class="nav-principal">
+            <ul class="ul-principal"></ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+   
+   
     <div class="contenedor contenedor-flex">
         <main class="contenido-principal">
             <article>
