--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Titulo Prueba Curso</title>
+    <title>Titulo PRUEBA Curso</title>
     <link rel="xxxxstylesheet" href="xxxxhttps://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="xxxxhttps://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="xxxxstylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header-principal">
-       <h1>Header Prueba Curso</h1>
+       <h1>Header PRUEBA Curso</h1>
     </header>
     <div> 
         <nav class="nav-principal">
