--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="xul-principal"></ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </section>
