--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
             </article>
         </main>
     </section>
-    <a href="/index.html">Volver</a>
+    <a href="index.html">Volver</a>
 </body>
 
 </html>
