--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Titulo PRUEBA Curso: HEAD</title>
+    <title>Titulo PRUEBA Curso Contacto: HEAD</title>
     <link rel="xxxxstylesheet" href="xxxxhttps://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="xxxxhttps://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="xxxxstylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <header class="header-principal">
+        <h2>Header PRUEBA Curso</h2>
+        <p>Párrafo del Header</p>
+     </header>
+     
      <section class="contacto">
             <article>
                 <h1>Contacto</h1>
@@ -29,7 +34,7 @@
             </article>
         </main>
     </section>
-    <a href="index.html">Volver</a>
+    <a href="index.html">Volver a index</a>
 </body>
 
 </html>
