--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <header class="header-principal">
-       <h1>Header PRUEBA Curso</h1>
+       <h2>Header PRUEBA Curso</h2>
        <p>Párrafo del Header</p>
     </header>
 
     <section class="section-principal"></section>
         <h2>Section PRUEBA Curso</h2>
         <p>Párrafo del Section</p>
-        <nav class="xnav-principal">
+        <nav class="nav-principal">
             <h3>Nav PRUEBA Curso</h3>
             <p>Párrafo del Nav</p>
             <ul class="xul-principal"></ul>
@@ -32,7 +32,7 @@
 
     <section class="contenedor contenedor-flex">
         <main class="contenido-principal">
-            <article>
+            <article class="entrada-blog">
                 <h1>Entrada del Blog</h1>
                 <img src="img/imagen1.jpg">
 
@@ -50,7 +50,6 @@
                     vehicula eget vehicula in, lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur sapien. Duis pretium blandit massa, mattis maximus nunc finibus in. Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet. Pellentesque
                     placerat ex sed nisl posuere, a porta augue finibus. Sed auctor mauris nec lacus interdum, nec consequat est pharetra. Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae condimentum ac, consequat quis dui. Donec varius
                     condimentum orci ac malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit lacus.</p>
-
             </article>
         </main>
 
