--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
         <p>Párrafo del Section</p>
         <nav class="nav-principal">
             <h3>Nav PRUEBA Curso</h3>
-            <p>Párrafo del Nav</p>
-            <ul class="xul-principal"></ul>
+                <a href="/html/">HTML</a> |
+                <a href="/css/">CSS</a> |
+                <a href="/js/">JavaScript</a> |
+                <a href="/python/">Python</a>
+       
+            <ul class="ul-principal">
+                <h3>Ul PRUEBA Curso</h3>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </section>
-
+ 
     <section class="contenedor contenedor-flex">
         <main class="contenido-principal">
             <article class="entrada-blog">
