--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <a href="/css/">CSS</a> |
                 <a href="/js/">JavaScript</a> |
                 <a href="/python/">Python</a>
-       
+        </nav>
+        <nav class="nav-principal">
             <ul class="ul-principal">
                 <h3>Ul PRUEBA Curso</h3>
                 <li><a href="#">Inicio</a></li>
@@ -70,11 +71,27 @@
         </aside>
     </section>
 
+    <section class="grid-container">
+        <article>1</article>
+        <article>2</article>
+        <article>3</article>
+        <article>4</article>
+        <article>5</article>
+        <article>6</article>
+        <article>7</article>
+        <article>8</article>
+    </section>
+
     <a name="SobreNosotrosII">
         <h2>Sobre NosotrosII</h2>
         <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
             in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </a>
+
+    <footer class="footer-principal">
+        <h2>Footer PRUEBA Curso</h2> 
+        <p>Párrafo del Footer</p>
+     </footer>
 
 </body>
 
