--- a/contacto.html
+++ b/contacto.html
@@ -3,17 +3,15 @@
  
 <head>
     <meta charset="utf-8">
-    <title>Titulo PRUEBA Curso Contacto: HEAD</title>
-    <link rel="xxxxstylesheet" href="xxxxhttps://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href="xxxxhttps://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="xxxxstylesheet">
+    <title>PRUEBA Curso Contacto: title HEAD</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <header class="header-principal">
-        <h2>Header PRUEBA Curso</h2>
-        <p>Párrafo del Header</p>
+        <h2>PRUEBA Curso Contacto: Body Header h2</h2>
+        <p>PRUEBA Curso Contacto: Body Header p</p>
      </header>
      
      <section class="contacto">
