--- a/index.html
+++ b/index.html
@@ -3,37 +3,36 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Titulo PRUEBA Curso: HEAD</title>
-    <link rel="xxxxstylesheet" href="xxxxhttps://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href="xxxxhttps://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="xxxxstylesheet">
+    <title>PRUEBA Curso: Head Title</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <header class="header-principal">
-       <h2>Header PRUEBA Curso</h2>
-       <p>Párrafo del Header</p>
+       <h2>PRUEBA Curso: Body Header h2</h2>
+       <p>PRUEBA Curso: Body Header p</p>
     </header>
 
-    <section class="section-principal"></section>
-        <h2>Section PRUEBA Curso</h2>
-        <p>Párrafo del Section</p>
+    <section class="section-principal">
+        <h2>PRUEBA Curso: Section h2</h2>
+        <p>PRUEBA Curso: Section p</p>
         <nav class="nav-principal">
-            <h3>Nav PRUEBA Curso</h3>
-                <a href="/html/">HTML</a> |
-                <a href="/css/">CSS</a> |
-                <a href="/js/">JavaScript</a> |
+            <h3>PRUEBA Curso: Nav h3</h3>
+                <a href="/html/">HTML</a> 
+                <a href="/css/">CSS</a> 
+                <a href="/js/">JavaScript</a> 
                 <a href="/python/">Python</a>
         </nav>
         <nav class="nav-principal">
             <ul class="ul-principal">
-                <h3>Ul PRUEBA Curso</h3>
+                <h3>PRUEBA Curso: ul h3</h3>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        <p>PRUEBA Curso: Fin Section</p>
     </section>
  
     <section class="contenedor contenedor-flex">
