--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <footer class="footer-principal">
         <h2>Footer PRUEBA Curso</h2> 
         <p>Párrafo del Footer</p>
+        <p>Versión 01.01.02</p>
      </footer>
 
 </body>
