--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
 
 <body>
     <header class="header-principal">
+       <section class="exampleMedia">
+        <p>PRUEBA Curso: Body Header exampleMedia</p>
+       </section>
        <h2>PRUEBA Curso: Body Header h2</h2>
        <p>PRUEBA Curso: Body Header p</p>
-    </header>
-
-    <section class="section-principal">
-        <h2>PRUEBA Curso: Section h2</h2>
-        <p>PRUEBA Curso: Section p</p>
-        <nav class="nav-principal">
-            <h3>PRUEBA Curso: Nav h3</h3>
+        <section class="section-principal">
+            <h2>PRUEBA Curso: Section h2</h2>
+            <p>PRUEBA Curso: Section p</p>
+            <nav class="nav-principal">
+                <h3>PRUEBA Curso: Nav h3</h3>
                 <a href="/html/">HTML</a> 
                 <a href="/css/">CSS</a> 
                 <a href="/js/">JavaScript</a> 
                 <a href="/python/">Python</a>
-        </nav>
-        <nav class="nav-principal">
-            <ul class="ul-principal">
-                <h3>PRUEBA Curso: ul h3</h3>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <p>PRUEBA Curso: Fin Section</p>
-    </section>
+            </nav>
+            <nav class="nav-principal">
+                <ul class="ul-principal">
+                    <h3>PRUEBA Curso: ul h3</h3>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <p>PRUEBA Curso: Fin Section</p>
+        </section>
+    </header>
  
     <section class="contenedor contenedor-flex">
         <main class="contenido-principal">
