--- a/index.html
+++ b/index.html
@@ -1,100 +1,158 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>PRUEBA Curso: Head Title</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<body>
+  <body>
     <header class="header-principal">
-       <section class="exampleMedia">
-        <p>PRUEBA Curso: Body Header exampleMedia</p>
-       </section>
-       <h2>PRUEBA Curso: Body Header h2</h2>
-       <p>PRUEBA Curso: Body Header p</p>
-        <section class="section-principal">
-            <h2>PRUEBA Curso: Section h2</h2>
-            <p>PRUEBA Curso: Section p</p>
-            <nav class="nav-principal">
-                <h3>PRUEBA Curso: Nav h3</h3>
-                <a href="/html/">HTML</a> 
-                <a href="/css/">CSS</a> 
-                <a href="/js/">JavaScript</a> 
-                <a href="/python/">Python</a>
-            </nav>
-            <nav class="nav-principal">
-                <ul class="ul-principal">
-                    <h3>PRUEBA Curso: ul h3</h3>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            <p>PRUEBA Curso: Fin Section</p>
-        </section>
+      <section>
+        <p>@media only screen and (max-width: 600px) {background: red;}</p>
+        <p>@media only screen and (min-width: 600px) {background: green;}</p>
+        <p>@media only screen and (min-width: 768px) {background: blue;}</p>
+        <p>@media only screen and (min-width: 992px) {background: orange;}</p>
+        <p>@media only screen and (min-width: 1200px){background: pink;}</p>
+        <p class="exampleMedia">PRUEBA Curso: Body Header exampleMedia</p>
+      </section>
+      <nav class="containerHF nav-principal">
+        <a class="itemCHF" href="#">FLex-Inicio</a>
+        <a class="itemCHF" href="#SobreNosotrosII">Flex-Sobre Nosotros II</a>
+        <a class="itemCHF" href="contacto.html">Flex-Contacto</a>
+      </nav>
+
+      <h2>PRUEBA Curso: Body Header h2</h2>
+      <p>PRUEBA Curso: Body Header p</p>
+      <section class="section-principal">
+        <h2>PRUEBA Curso: Section h2</h2>
+        <p>PRUEBA Curso: Section p</p>
+        <nav class="nav-principal">
+          <h3>PRUEBA Curso: Nav h3</h3>
+          <a href="/html/">HTML</a>
+          <a href="/css/">CSS</a>
+          <a href="/js/">JavaScript</a>
+          <a href="/python/">Python</a>
+        </nav>
+        <nav class="nav-principal">
+          <ul class="ul-principal">
+            <h3>PRUEBA Curso: ul h3</h3>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </nav>
+        <p>PRUEBA Curso: Fin Section</p>
+      </section>
     </header>
- 
+
     <section class="contenedor contenedor-flex">
-        <main class="contenido-principal">
-            <article class="entrada-blog">
-                <h1>Entrada del Blog</h1>
-                <img src="img/imagen1.jpg">
+      <main class="contenido-principal">
+        <article class="entrada-blog">
+          <h1>Entrada del Blog</h1>
+          <img src="img/imagen1.jpg" />
 
-                <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus. Praesent laoreet tortor vel mauris suscipit convallis.
-                    Duis interdum venenatis metus, ut condimentum tortor fringilla eu. Curabitur mi lorem, pellentesque sed feugiat vitae, commodo id leo. Mauris nec dui consectetur, ullamcorper eros vel, volutpat nulla. Mauris mattis dignissim laoreet.
-                    In at tellus et quam iaculis commodo. Aliquam cursus turpis sed elit consequat placerat sit amet in ante. Nulla libero ex, imperdiet non faucibus a, sagittis sit amet ligula. Sed blandit ante est, nec aliquet quam pulvinar sed. Sed
-                    varius, lacus in facilisis ultrices, urna turpis ullamcorper nibh, sit amet interdum nisi nisi eget arcu. Vestibulum bibendum velit justo, eget cursus ipsum pharetra in.</p>
+          <p>
+            Maecenas maximus urna vitae nisl semper, id volutpat ipsum
+            scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis
+            risus. Quisque varius orci et augue scelerisque luctus. Praesent
+            laoreet tortor vel mauris suscipit convallis. Duis interdum
+            venenatis metus, ut condimentum tortor fringilla eu. Curabitur mi
+            lorem, pellentesque sed feugiat vitae, commodo id leo. Mauris nec
+            dui consectetur, ullamcorper eros vel, volutpat nulla. Mauris mattis
+            dignissim laoreet. In at tellus et quam iaculis commodo. Aliquam
+            cursus turpis sed elit consequat placerat sit amet in ante. Nulla
+            libero ex, imperdiet non faucibus a, sagittis sit amet ligula. Sed
+            blandit ante est, nec aliquet quam pulvinar sed. Sed varius, lacus
+            in facilisis ultrices, urna turpis ullamcorper nibh, sit amet
+            interdum nisi nisi eget arcu. Vestibulum bibendum velit justo, eget
+            cursus ipsum pharetra in.
+          </p>
 
-                <p>Aliquam urna enim, ullamcorper vel urna id, tincidunt lobortis tortor. Donec bibendum condimentum purus, at rhoncus sapien. Phasellus ac ipsum metus. Aliquam arcu erat, posuere ac dolor vel, imperdiet tempor enim. Fusce tristique consequat
-                    convallis. Sed auctor fermentum elit. Vestibulum mi libero, tincidunt quis auctor id, faucibus nec augue. Pellentesque ut vestibulum augue. Aenean in lorem tincidunt, sodales arcu eget, bibendum nisi. Proin vitae magna eu leo vulputate
-                    congue consectetur sed felis. Ut tempus neque sit amet tortor aliquet hendrerit. Nulla feugiat metus quis libero convallis fermentum. Morbi eleifend id tellus quis iaculis. Sed vitae turpis eget eros faucibus luctus at vitae lacus.
-                    Nunc blandit arcu arcu, non condimentum dui posuere vitae. Nulla facilisi.</p>
+          <p>
+            Aliquam urna enim, ullamcorper vel urna id, tincidunt lobortis
+            tortor. Donec bibendum condimentum purus, at rhoncus sapien.
+            Phasellus ac ipsum metus. Aliquam arcu erat, posuere ac dolor vel,
+            imperdiet tempor enim. Fusce tristique consequat convallis. Sed
+            auctor fermentum elit. Vestibulum mi libero, tincidunt quis auctor
+            id, faucibus nec augue. Pellentesque ut vestibulum augue. Aenean in
+            lorem tincidunt, sodales arcu eget, bibendum nisi. Proin vitae magna
+            eu leo vulputate congue consectetur sed felis. Ut tempus neque sit
+            amet tortor aliquet hendrerit. Nulla feugiat metus quis libero
+            convallis fermentum. Morbi eleifend id tellus quis iaculis. Sed
+            vitae turpis eget eros faucibus luctus at vitae lacus. Nunc blandit
+            arcu arcu, non condimentum dui posuere vitae. Nulla facilisi.
+          </p>
 
-                <p>Aliquam erat volutpat. Ut dapibus tincidunt odio, a pulvinar dolor dapibus varius. Quisque fringilla faucibus sapien nec blandit. Cras at lectus tincidunt mi cursus dapibus in a nunc. Suspendisse vitae velit orci. Suspendisse nisi sapien,
-                    vehicula eget vehicula in, lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur sapien. Duis pretium blandit massa, mattis maximus nunc finibus in. Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet. Pellentesque
-                    placerat ex sed nisl posuere, a porta augue finibus. Sed auctor mauris nec lacus interdum, nec consequat est pharetra. Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae condimentum ac, consequat quis dui. Donec varius
-                    condimentum orci ac malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit lacus.</p>
-            </article>
-        </main>
+          <p>
+            Aliquam erat volutpat. Ut dapibus tincidunt odio, a pulvinar dolor
+            dapibus varius. Quisque fringilla faucibus sapien nec blandit. Cras
+            at lectus tincidunt mi cursus dapibus in a nunc. Suspendisse vitae
+            velit orci. Suspendisse nisi sapien, vehicula eget vehicula in,
+            lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur
+            sapien. Duis pretium blandit massa, mattis maximus nunc finibus in.
+            Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet.
+            Pellentesque placerat ex sed nisl posuere, a porta augue finibus.
+            Sed auctor mauris nec lacus interdum, nec consequat est pharetra.
+            Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae
+            condimentum ac, consequat quis dui. Donec varius condimentum orci ac
+            malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit
+            lacus.
+          </p>
+        </article>
+      </main>
 
-        <aside name="SobreNosotros" class="sidebar">
-            <h2>Sobre Nosotros</h2>
-            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </aside>
-        <aside class="sidebar">
-            <h2>Misión</h2>
-            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </aside>
+      <aside name="SobreNosotros" class="sidebar">
+        <h2>Sobre Nosotros</h2>
+        <p>
+          Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </p>
+      </aside>
+      <aside class="sidebar">
+        <h2>Misión</h2>
+        <p>
+          Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </p>
+      </aside>
     </section>
 
     <section class="grid-container">
-        <article>1</article>
-        <article>2</article>
-        <article>3</article>
-        <article>4</article>
-        <article>5</article>
-        <article>6</article>
-        <article>7</article>
-        <article>8</article>
+      <article>1</article>
+      <article>2</article>
+      <article>3</article>
+      <article>4</article>
     </section>
 
     <a name="SobreNosotrosII">
-        <h2>Sobre NosotrosII</h2>
-        <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>Sobre NosotrosII</h2>
+      <p>
+        Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.
+      </p>
     </a>
 
     <footer class="footer-principal">
-        <h2>Footer PRUEBA Curso</h2> 
-        <p>Párrafo del Footer</p>
-        <p>Versión 01.01.02</p>
-     </footer>
-
-</body>
-
+      <h2>Footer PRUEBA Curso</h2>
+      <p>Párrafo del Footer</p>
+      <p>Versión 01.01.02</p>
+    </footer>
+  </body>
 </html>
