--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>@media only screen and (min-width: 1200px){background: pink;}</p>
         <p class="exampleMedia">PRUEBA Curso: Body Header exampleMedia</p>
       </section>
-      <nav class="containerHF nav-principal">
+      <nav class="containerHF section-principal">
         <a class="itemCHF" href="#">FLex-Inicio</a>
         <a class="itemCHF" href="#SobreNosotrosII">Flex-Sobre Nosotros II</a>
         <a class="itemCHF" href="contacto.html">Flex-Contacto</a>
@@ -37,7 +37,7 @@
         </nav>
         <nav class="nav-principal">
           <ul class="ul-principal">
-            <h3>PRUEBA Curso: ul h3</h3>
+            <h3>PRUEBA Curso: Ul h3</h3>
             <li><a href="#">Inicio</a></li>
             <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
             <li><a href="contacto.html">Contacto</a></li>
@@ -130,10 +130,10 @@
     </section>
 
     <section class="grid-container">
-      <article>1</article>
-      <article>2</article>
-      <article>3</article>
-      <article>4</article>
+      <a>G</a>
+      <a>R</a>
+      <a>I</a>
+      <a>D</a>
     </section>
 
     <a name="SobreNosotrosII">
