--- a/index.html
+++ b/index.html
@@ -1,158 +1,189 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>PRUEBA Curso: Head Title</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+<html lang="en">
 
-  <body>
-    <header class="header-principal">
-      <section>
-        <p>@media only screen and (max-width: 600px) {background: red;}</p>
-        <p>@media only screen and (min-width: 600px) {background: green;}</p>
-        <p>@media only screen and (min-width: 768px) {background: blue;}</p>
-        <p>@media only screen and (min-width: 992px) {background: orange;}</p>
-        <p>@media only screen and (min-width: 1200px){background: pink;}</p>
-        <p class="exampleMedia">PRUEBA Curso: Body Header exampleMedia</p>
-      </section>
-      <nav class="containerHF section-principal">
-        <a class="itemCHF" href="#">FLex-Inicio</a>
-        <a class="itemCHF" href="#SobreNosotrosII">Flex-Sobre Nosotros II</a>
-        <a class="itemCHF" href="contacto.html">Flex-Contacto</a>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Veterinaria </title>
+  <link rel="icon" href="img/icon/favicon_II.ico" />
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  <!-- GoogleFonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&family=Raleway:wght@200;300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./style/default.css">
+  <link rel="stylesheet" href="./style/index.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+</head>
+
+<body>
+  <header>
+    <div>
+
+      <!-- Menu Hamburguesa con bootstrap -->
+      <!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark"> -->
+      <nav class="navbar navbar-expand-sm navbar-ligth nav-bar">
+        <div class="container-fluid">
+
+          <h1>Veterinaria Grupo 9 </h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div></div>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html" style="font-size: 16px; color: black;">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html" style="font-size: 16px; color: black;">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="adoptame.html" style="font-size: 16px; color: black; ">Adoptame</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#Ubicacion" style="font-size: 16px; color: black;">Ubicación</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="formulario.html" style="font-size: 16px; color: black;">Contacto</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
       </nav>
 
-      <h2>PRUEBA Curso: Body Header h2</h2>
-      <p>PRUEBA Curso: Body Header p</p>
-      <section class="section-principal">
-        <h2>PRUEBA Curso: Section h2</h2>
-        <p>PRUEBA Curso: Section p</p>
-        <nav class="nav-principal">
-          <h3>PRUEBA Curso: Nav h3</h3>
-          <a href="/html/">HTML</a>
-          <a href="/css/">CSS</a>
-          <a href="/js/">JavaScript</a>
-          <a href="/python/">Python</a>
-        </nav>
-        <nav class="nav-principal">
-          <ul class="ul-principal">
-            <h3>PRUEBA Curso: Ul h3</h3>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#SobreNosotrosII">Sobre Nosotros II</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-          </ul>
-        </nav>
-        <p>PRUEBA Curso: Fin Section</p>
-      </section>
-    </header>
 
-    <section class="contenedor contenedor-flex">
-      <main class="contenido-principal">
-        <article class="entrada-blog">
-          <h1>Entrada del Blog</h1>
-          <img src="img/imagen1.jpg" />
 
-          <p>
-            Maecenas maximus urna vitae nisl semper, id volutpat ipsum
-            scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis
-            risus. Quisque varius orci et augue scelerisque luctus. Praesent
-            laoreet tortor vel mauris suscipit convallis. Duis interdum
-            venenatis metus, ut condimentum tortor fringilla eu. Curabitur mi
-            lorem, pellentesque sed feugiat vitae, commodo id leo. Mauris nec
-            dui consectetur, ullamcorper eros vel, volutpat nulla. Mauris mattis
-            dignissim laoreet. In at tellus et quam iaculis commodo. Aliquam
-            cursus turpis sed elit consequat placerat sit amet in ante. Nulla
-            libero ex, imperdiet non faucibus a, sagittis sit amet ligula. Sed
-            blandit ante est, nec aliquet quam pulvinar sed. Sed varius, lacus
-            in facilisis ultrices, urna turpis ullamcorper nibh, sit amet
-            interdum nisi nisi eget arcu. Vestibulum bibendum velit justo, eget
-            cursus ipsum pharetra in.
-          </p>
+    </div>
+  </header>
 
-          <p>
-            Aliquam urna enim, ullamcorper vel urna id, tincidunt lobortis
-            tortor. Donec bibendum condimentum purus, at rhoncus sapien.
-            Phasellus ac ipsum metus. Aliquam arcu erat, posuere ac dolor vel,
-            imperdiet tempor enim. Fusce tristique consequat convallis. Sed
-            auctor fermentum elit. Vestibulum mi libero, tincidunt quis auctor
-            id, faucibus nec augue. Pellentesque ut vestibulum augue. Aenean in
-            lorem tincidunt, sodales arcu eget, bibendum nisi. Proin vitae magna
-            eu leo vulputate congue consectetur sed felis. Ut tempus neque sit
-            amet tortor aliquet hendrerit. Nulla feugiat metus quis libero
-            convallis fermentum. Morbi eleifend id tellus quis iaculis. Sed
-            vitae turpis eget eros faucibus luctus at vitae lacus. Nunc blandit
-            arcu arcu, non condimentum dui posuere vitae. Nulla facilisi.
-          </p>
+  <div class="container-grid">
 
-          <p>
-            Aliquam erat volutpat. Ut dapibus tincidunt odio, a pulvinar dolor
-            dapibus varius. Quisque fringilla faucibus sapien nec blandit. Cras
-            at lectus tincidunt mi cursus dapibus in a nunc. Suspendisse vitae
-            velit orci. Suspendisse nisi sapien, vehicula eget vehicula in,
-            lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur
-            sapien. Duis pretium blandit massa, mattis maximus nunc finibus in.
-            Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet.
-            Pellentesque placerat ex sed nisl posuere, a porta augue finibus.
-            Sed auctor mauris nec lacus interdum, nec consequat est pharetra.
-            Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae
-            condimentum ac, consequat quis dui. Donec varius condimentum orci ac
-            malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit
-            lacus.
-          </p>
-        </article>
-      </main>
+    <main>
+      <!-- Carrusel hecho con bootstrap -->
+      <div class="imagenCarrusel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/carrusel1.png" class="d-block mx-auto" alt="mascotas1" style="max-width: 90%" >
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel2.png" class="d-block mx-auto" alt="mascotas2" style="max-width: 90%" >
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel3.png" class="d-block mx-auto" alt="mascotas3" style="max-width: 90%" >
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel4.png" class="d-block mx-auto" alt="mascotas4" style="max-width: 90%" >
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel5.png" class="d-block mx-auto" alt="mascotas4" style="max-width: 90%" >
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </main>
 
-      <aside name="SobreNosotros" class="sidebar">
-        <h2>Sobre Nosotros</h2>
+    <aside>
+      <div class="home" id="home">
+        <h3>Nosotros</h3>
         <p>
-          Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
+          Más que una clínica veterinaria, Veterinaria Grupo 9 es una familia dedicada a brindar atención integral a sus
+          mascotas. Con años de experiencia y un profundo amor por los animales, nuestro equipo se compromete a ofrecer
+          servicios veterinarios de vanguardia en un ambiente cálido y acogedor.
         </p>
-      </aside>
-      <aside class="sidebar">
-        <h2>Misión</h2>
+        <h3>Nuestra Misión</h3>
         <p>
-          Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
+          Nuestra misión es brindar atención veterinaria de excelencia a las mascotas de nuestra comunidad, promoviendo
+          su salud y bienestar a través de servicios preventivos, curativos y de educación.
         </p>
-      </aside>
-    </section>
+        <h3>Nuestra Visión</h3>
+        <p>
+          Aspiramos a ser la clínica veterinaria líder en nuestra comunidad, reconocida por la excelencia en nuestros
+          servicios, el compromiso con el bienestar animal y la construcción de relaciones sólidas con nuestros
+          clientes.
+        </p>
+      </div>
+    </aside>
 
-    <section class="grid-container">
-      <a>G</a>
-      <a>R</a>
-      <a>I</a>
-      <a>D</a>
-    </section>
+    <div class="Ubicacion" id="Ubicacion">
+      <h3>Ubicación</h3>
 
-    <a name="SobreNosotrosII">
-      <h2>Sobre NosotrosII</h2>
-      <p>
-        Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum.
-      </p>
-    </a>
+      <div class="parrafo">
+        <p>
+          <i class="fa-solid fa-location-dot"></i> Nos encontramos en el
+          corazón de Palermo SOHO a metros de Plaza Serrano, en la esquina de
+          Honduras al 5000
+        </p>
+      </div>
+    </div>
 
-    <footer class="footer-principal">
-      <h2>Footer PRUEBA Curso</h2>
-      <p>Párrafo del Footer</p>
-      <p>Versión 01.00.03</p>
-    </footer>
-  </body>
+
+    <div class="mapa">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2762.0079943026276!2d-58.43402027796249!3d-34.588997646812864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb58861e049ff%3A0x6fb810696f4cb8d6!2sHonduras%205000%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1682958137238!5m2!1ses!2sar"
+        width="800"  height="600" style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+
+  </div>
+
+  <footer class="footer">
+
+
+    <div class="social">
+      <a class="facebook" href="https://facebook.com" title="Seguinos en Facebook" target="_blank">
+      </a>
+      <a class="instagram" href="https://instagram.com" title="Seguinos en Instagram" target="_blank">
+      </a>
+      <a class="github" href="https://github.com/mwcastellan/tpo_nodejs_fron/tree/main"
+        title="Clona el repositorio en github" target="_blank">
+      </a>
+      <a class="whatsapp"
+        href="https://api.whatsapp.com/send?phone=110303456&text=Buenos%20dias,%20mi%20consulta%20es..."
+        title="Mensajeanos por Whatsapp" target="_blank">
+      </a>
+    </div>
+
+    <p class="footer"> &copy; 2024 derechos reservados</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+</body>
+
 </html>
